增加了倒计时功能，将界面统一了

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,5 +56,6 @@
         </activity>
         <activity android:name=".Activity.NoteListActivity"/>
         <activity android:name=".Activity.ZhangbenActivity"/>
+        <activity android:name=".Activity.DaojishiActivity"/>
     </application>
 </manifest>
