--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 
@@ -58,5 +59,6 @@
         <activity android:name=".Activity.NoteListActivity"/>
         <activity android:name=".Activity.ZhangbenActivity"/>
         <activity android:name=".Activity.DaojishiActivity"/>
+        <activity android:name=".Activity.HeadActivity"/>
     </application>
 </manifest>
