[bug]加入笔记列表显示图片；修复滑动列表滑动不顺畅bug；新闻自动加载第二页

--- a/module_app/build.gradle
+++ b/module_app/build.gradle
@@ -92,7 +92,7 @@ dependencies {
     //    implementation 'com.android.support:cardview-v7:26.1.0'
     //    implementation 'com.android.support:animated-vector-drawable:26.1.0'
     implementation project(':module_news')
-    implementation project(path: ':lib_xrichtext')
+    compile project(path: ':lib_xrichtext')
     implementation project(':module_calendar')
     implementation project(':lib_common')
 }
