--- a/lib_xrichtext/build.gradle
+++ b/lib_xrichtext/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'me.iwf.photopicker:PhotoPicker:0.8.4@aar'
     //图片加载框架 https://github.com/bumptech/glide
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
